mouse: Fix initial widget visibility

We're showing all widgets on panel start up instead of selectively
hiding non-relevant widgets since the gtk_widget_show_all() on the
stack after creating the panel widget and adding it to the stack
overrides the visibility decisions done while constructing the panel.

https://bugzilla.gnome.org/show_bug.cgi?id=764257